// Proto v3ã€‚
syntax = "proto3";  
package pb;

// Define Login Service
service Login {  
    rpc EmailChecking (LoginRequest) returns (LoginReply) {}
}

// Login need email&password
message LoginRequest {  
    string email = 1;
    string password = 2;
}

// Reply the result of login
message LoginReply {  
    string result = 1;
}
